# gitignore-test

./: .gitignore  CHANGELOG.md  README.md  gitignore-test.cabal
app/: Main.hs
src/: GitignoreTest.hs
